# arm_project

./: .gitignore  Cargo.toml  README.md  openocd.gdb
.cargo/: config.toml
.github/workflows/: security-audit.yaml  test.yaml
doc/: README.md
src/: lib.rs  main.rs  parse.rs  serialization.rs  types.rs
src/parse/: test.rs
